Added code for real backend

--- a/grover.ipynb
+++ b/grover.ipynb
@@ -22,11 +22,21 @@
     "from qiskit import QuantumCircuit, transpile\n",
     "from qiskit.visualization import plot_gate_map\n",
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
-    "from qiskit.primitives import BackendSamplerV2\n",
+    "from qiskit_ibm_runtime import SamplerV2 as Sampler\n",
+    "from qiskit_ibm_runtime import QiskitRuntimeService\n",
+    "from qiskit.primitives import BackendSamplerV2, StatevectorSampler\n",
     "from qiskit.providers.basic_provider import BasicSimulator\n"
    ],
    "outputs": [],
    "execution_count": 16
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "service = QiskitRuntimeService()",
+   "id": "534f955c75878caa"
   },
   {
    "metadata": {
@@ -302,6 +312,7 @@
    "source": [
     "backend_fc = FakeBackend(20, 1)\n",
     "backend_nn = FakeBackend(20, 2)\n",
+    "backend_real = service.backend(name='ibm_brisbane')\n",
     "\n",
     "target_fc = backend_fc.target\n",
     "coupling_map_backend_fc = target_fc.build_coupling_map()\n",
@@ -503,6 +514,24 @@
    "execution_count": 25
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "qc_real = QuantumCircuit(3)\n",
+    "grover(qc_real, 3, 1)\n",
+    "\n",
+    "qc_real.measure_all()\n",
+    "#qc_real.draw(output='mpl')\n",
+    "pm_real = generate_preset_pass_manager(optimization_level=3, backend=backend_real)\n",
+    "transpiled_qc_real = pm_real.run(qc_real)\n",
+    "\n",
+    "#transpiled_qc_real.draw(\"mpl\", idle_wires=False)"
+   ],
+   "id": "cca1ad112e6b1a63"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-01-26T18:01:33.516634Z",
@@ -510,7 +539,10 @@
     }
    },
    "cell_type": "code",
-   "source": "sampler = BackendSamplerV2(backend=backend_nn)",
+   "source": [
+    "sampler = BackendSamplerV2(backend=backend_nn)\n",
+    "sampler_real = Sampler(mode=backend_real)"
+   ],
    "id": "b135955348a219e2",
    "outputs": [],
    "execution_count": 26
