--- a/grover.ipynb
+++ b/grover.ipynb
@@ -48,7 +48,7 @@
    "cell_type": "code",
    "source": [
     "class FakeBackend(BackendV2):\n",
-    "    \"\"\"Fake fully-connected backend.\"\"\"\n",
+    "    \"\"\"Fake fully-connected or nearest-neighbour-connected backend.\"\"\"\n",
     "\n",
     "    def __init__(self, num_qubits=3, type=1):\n",
     "        # Create a fully-connected or nearest-neighbour graph using the rustworkx library, then instantiate a new target\n",
