--- a/grover_fake_backend.ipynb
+++ b/grover_fake_backend.ipynb
@@ -35,7 +35,9 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "service = QiskitRuntimeService()",
+   "source": [
+    "service = QiskitRuntimeService()"
+   ],
    "id": "534f955c75878caa"
   },
   {
