removed some unnecessary code

--- a/grover_ibm.ipynb
+++ b/grover_ibm.ipynb
@@ -16,7 +16,7 @@
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "from qiskit import QuantumCircuit\n",
     "import math\n",
-    "token = '6f64d5207b1dc2675b593b0ffdd2d4283feec2c386bdd84cd666b76a768ed2405c04e66f128eca830e4642ca8b42b69a7a959e180bfc58ba5cdc6a386c647283' #Removed for obvious reasons\n",
+    "token = '' #Removed for obvious reasons\n",
     "QiskitRuntimeService.save_account(\n",
     "  token=token,\n",
     "  channel=\"ibm_quantum\",\n",
@@ -188,150 +188,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "        ┌───┐┌───┐     ┌───┐┌───┐┌───┐          ┌───┐┌───┐      ░ ┌─┐      \n   q_0: ┤ H ├┤ X ├──■──┤ X ├┤ H ├┤ X ├───────■──┤ X ├┤ H ├──────░─┤M├──────\n        ├───┤├───┤  │  ├───┤├───┤├───┤       │  ├───┤├───┤      ░ └╥┘┌─┐   \n   q_1: ┤ H ├┤ X ├──■──┤ X ├┤ H ├┤ X ├───────■──┤ X ├┤ H ├──────░──╫─┤M├───\n        ├───┤├───┤┌─┴─┐├───┤├───┤├───┤┌───┐┌─┴─┐├───┤├───┤┌───┐ ░  ║ └╥┘┌─┐\n   q_2: ┤ H ├┤ H ├┤ X ├┤ H ├┤ H ├┤ X ├┤ H ├┤ X ├┤ H ├┤ X ├┤ H ├─░──╫──╫─┤M├\n        └───┘└───┘└───┘└───┘└───┘└───┘└───┘└───┘└───┘└───┘└───┘ ░  ║  ║ └╥┘\nmeas: 3/═══════════════════════════════════════════════════════════╩══╩══╩═\n                                                                   0  1  2 ",
-      "text/html": "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">        ┌───┐┌───┐     ┌───┐┌───┐┌───┐          ┌───┐┌───┐      ░ ┌─┐      \n   q_0: ┤ H ├┤ X ├──■──┤ X ├┤ H ├┤ X ├───────■──┤ X ├┤ H ├──────░─┤M├──────\n        ├───┤├───┤  │  ├───┤├───┤├───┤       │  ├───┤├───┤      ░ └╥┘┌─┐   \n   q_1: ┤ H ├┤ X ├──■──┤ X ├┤ H ├┤ X ├───────■──┤ X ├┤ H ├──────░──╫─┤M├───\n        ├───┤├───┤┌─┴─┐├───┤├───┤├───┤┌───┐┌─┴─┐├───┤├───┤┌───┐ ░  ║ └╥┘┌─┐\n   q_2: ┤ H ├┤ H ├┤ X ├┤ H ├┤ H ├┤ X ├┤ H ├┤ X ├┤ H ├┤ X ├┤ H ├─░──╫──╫─┤M├\n        └───┘└───┘└───┘└───┘└───┘└───┘└───┘└───┘└───┘└───┘└───┘ ░  ║  ║ └╥┘\nmeas: 3/═══════════════════════════════════════════════════════════╩══╩══╩═\n                                                                   0  1  2 </pre>"
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def grover_3_all_to_all(element: int):\n",
-    "    qc = QuantumCircuit(3)\n",
-    "    \n",
-    "    qc.h(0)\n",
-    "    qc.h(1)\n",
-    "    qc.h(2)\n",
-    "    \n",
-    "    set_element_qiskit(element, 3, qc)\n",
-    "    \n",
-    "    qc.h(2)\n",
-    "    \n",
-    "    qc.ccx(0, 1, 2)\n",
-    "    \n",
-    "    qc.h(2)\n",
-    "    \n",
-    "    set_element_qiskit(element, 3, qc)\n",
-    "    \n",
-    "    qc.h(0)\n",
-    "    qc.h(1)\n",
-    "    qc.h(2)\n",
-    "    \n",
-    "    qc.x(0)\n",
-    "    qc.x(1)\n",
-    "    qc.x(2)\n",
-    "    \n",
-    "    qc.h(2)\n",
-    "    \n",
-    "    qc.ccx(0, 1, 2)\n",
-    "    \n",
-    "    qc.h(2)\n",
-    "    \n",
-    "    qc.x(0)\n",
-    "    qc.x(1)\n",
-    "    qc.x(2)\n",
-    "    \n",
-    "    qc.h(0)\n",
-    "    qc.h(1)\n",
-    "    qc.h(2)\n",
-    "    \n",
-    "    qc.measure_all()\n",
-    "    \n",
-    "    return qc\n",
-    "\n",
-    "grover_3_all_to_all_cq = grover_3_all_to_all(4)\n",
-    "grover_3_all_to_all_cq.draw(scale=10)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2025-01-21T19:35:19.851309200Z",
-     "start_time": "2025-01-21T19:35:19.813076100Z"
-    }
-   },
-   "id": "33b24eafa77c5b25"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 132,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "        ┌───┐┌───┐              ┌───┐                             ┌───┐┌───┐»\n   q_0: ┤ H ├┤ X ├───────────■──┤ X ├────────────■─────────────X──┤ X ├┤ H ├»\n        ├───┤├───┤         ┌─┴─┐└─┬─┘          ┌─┴─┐           │  ├───┤├───┤»\n   q_1: ┤ H ├┤ X ├─■───────┤ X ├──■───■────────┤ X ├─■─────────X──┤ X ├┤ H ├»\n        ├───┤└───┘ │P(π/2) └───┘      │P(-π/2) └───┘ │P(π/2) ┌───┐├───┤└───┘»\n   q_2: ┤ H ├──────■──────────────────■──────────────■───────┤ H ├┤ X ├─────»\n        └───┘                                                └───┘└───┘     »\nmeas: 3/════════════════════════════════════════════════════════════════════»\n                                                                            »\n«        ┌───┐              ┌───┐                             ┌───┐┌───┐ ░ ┌─┐»\n«   q_0: ┤ X ├───────────■──┤ X ├────────────■─────────────X──┤ X ├┤ H ├─░─┤M├»\n«        ├───┤         ┌─┴─┐└─┬─┘          ┌─┴─┐           │  ├───┤├───┤ ░ └╥┘»\n«   q_1: ┤ X ├─■───────┤ X ├──■───■────────┤ X ├─■─────────X──┤ X ├┤ H ├─░──╫─»\n«        └───┘ │P(π/2) └───┘      │P(-π/2) └───┘ │P(π/2) ┌───┐├───┤└───┘ ░  ║ »\n«   q_2: ──────■──────────────────■──────────────■───────┤ X ├┤ H ├──────░──╫─»\n«                                                        └───┘└───┘      ░  ║ »\n«meas: 3/═══════════════════════════════════════════════════════════════════╩═»\n«                                                                           0 »\n«              \n«   q_0: ──────\n«        ┌─┐   \n«   q_1: ┤M├───\n«        └╥┘┌─┐\n«   q_2: ─╫─┤M├\n«         ║ └╥┘\n«meas: 3/═╩══╩═\n«         1  2 ",
-      "text/html": "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">        ┌───┐┌───┐              ┌───┐                             ┌───┐┌───┐»\n   q_0: ┤ H ├┤ X ├───────────■──┤ X ├────────────■─────────────X──┤ X ├┤ H ├»\n        ├───┤├───┤         ┌─┴─┐└─┬─┘          ┌─┴─┐           │  ├───┤├───┤»\n   q_1: ┤ H ├┤ X ├─■───────┤ X ├──■───■────────┤ X ├─■─────────X──┤ X ├┤ H ├»\n        ├───┤└───┘ │P(π/2) └───┘      │P(-π/2) └───┘ │P(π/2) ┌───┐├───┤└───┘»\n   q_2: ┤ H ├──────■──────────────────■──────────────■───────┤ H ├┤ X ├─────»\n        └───┘                                                └───┘└───┘     »\nmeas: 3/════════════════════════════════════════════════════════════════════»\n                                                                            »\n«        ┌───┐              ┌───┐                             ┌───┐┌───┐ ░ ┌─┐»\n«   q_0: ┤ X ├───────────■──┤ X ├────────────■─────────────X──┤ X ├┤ H ├─░─┤M├»\n«        ├───┤         ┌─┴─┐└─┬─┘          ┌─┴─┐           │  ├───┤├───┤ ░ └╥┘»\n«   q_1: ┤ X ├─■───────┤ X ├──■───■────────┤ X ├─■─────────X──┤ X ├┤ H ├─░──╫─»\n«        └───┘ │P(π/2) └───┘      │P(-π/2) └───┘ │P(π/2) ┌───┐├───┤└───┘ ░  ║ »\n«   q_2: ──────■──────────────────■──────────────■───────┤ X ├┤ H ├──────░──╫─»\n«                                                        └───┘└───┘      ░  ║ »\n«meas: 3/═══════════════════════════════════════════════════════════════════╩═»\n«                                                                           0 »\n«              \n«   q_0: ──────\n«        ┌─┐   \n«   q_1: ┤M├───\n«        └╥┘┌─┐\n«   q_2: ─╫─┤M├\n«         ║ └╥┘\n«meas: 3/═╩══╩═\n«         1  2 </pre>"
-     },
-     "execution_count": 132,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def grover_3_linear(element: int):\n",
-    "    qc = QuantumCircuit(3)\n",
-    "    qc.h(0)\n",
-    "    qc.h(1)\n",
-    "    qc.h(2)\n",
-    "    \n",
-    "    qc.x(0)\n",
-    "    qc.x(1)\n",
-    "    \n",
-    "    qc.cp(math.pi / 2, 1, 2)\n",
-    "    qc.cx(0, 1)\n",
-    "    qc.cx(1, 0)\n",
-    "    qc.cp(- math.pi / 2, 1, 2)\n",
-    "    qc.cx(0, 1)\n",
-    "    qc.cp(math.pi / 2, 1, 2)\n",
-    "    qc.swap(0, 1)\n",
-    "    \n",
-    "    qc.x(0)\n",
-    "    qc.x(1)\n",
-    "    \n",
-    "    qc.h(0)\n",
-    "    qc.h(1)\n",
-    "    qc.h(2)\n",
-    "    \n",
-    "    qc.x(0)\n",
-    "    qc.x(1)\n",
-    "    qc.x(2)\n",
-    "    \n",
-    "    qc.cp(math.pi / 2, 1, 2)\n",
-    "    qc.cx(0, 1)\n",
-    "    qc.cx(1, 0)\n",
-    "    qc.cp(- math.pi / 2, 1, 2)\n",
-    "    qc.cx(0, 1)\n",
-    "    qc.cp(math.pi / 2, 1, 2)\n",
-    "    qc.swap(0, 1)\n",
-    "    \n",
-    "    qc.x(0)\n",
-    "    qc.x(1)\n",
-    "    qc.x(2)\n",
-    "    \n",
-    "    qc.h(0)\n",
-    "    qc.h(1)\n",
-    "    qc.h(2)\n",
-    "    \n",
-    "    qc.measure_all()\n",
-    "\n",
-    "    return qc\n",
-    "grover_3_linear_cq = grover_3_linear(4)\n",
-    "grover_3_linear_cq.draw()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2025-01-21T19:35:22.828071200Z",
-     "start_time": "2025-01-21T19:35:22.802441700Z"
-    }
-   },
-   "id": "d8c8b1505d92c559"
-  },
-  {
-   "cell_type": "code",
    "execution_count": 137,
    "outputs": [],
    "source": [
@@ -365,10 +221,7 @@
    "execution_count": 138,
    "outputs": [],
    "source": [
-    "# results = ibm_hardware(10, qc)\n",
-    "results = ibm_hardware(10, grover_qc)\n",
-    "# results = ibm_hardware(10, grover_3_all_to_all_cq)\n",
-    "# results = ibm_hardware(10, grover_3_linear_cq)"
+    "results = ibm_hardware(10, grover_qc)"
    ],
    "metadata": {
     "collapsed": false,
